tests-integration/fixtures/checking/144_derive_newtype_missing_given/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
Identity :: forall (a :: Type). (a :: Type) -> Identity (a :: Type)

Types
Identity :: Type -> Type

Data
Identity
  Quantified = :0
  Kind = :0


Roles
Identity = [Representational]

Derived
derive Show (Identity (a :: Type) :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Show (a :: Type)
  --> 7:1..7:42
  |
7 | derive newtype instance Show (Identity a)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
